# bevy_pokemon_roguelike

./: .gitignore  Cargo.toml  README.md  TODO.md
assets/: tiles.assets.ron
assets/conversions/: pokemon.txt
assets/fonts/text/: font.json
assets/images/pokemons/charmander/: charmander.nodetree
assets_builder/: Cargo.toml
assets_builder/src/: atlas.rs  main.rs
crates/assets_builder/: Cargo.toml
crates/assets_builder/src/: atlas.rs  bitmap_fonts.rs  main.rs  utils.rs
crates/assets_builder/src/bitmap_fonts/: font_data.rs  mod.rs
crates/assets_builder/src/char_animations/: anim_data.rs  char_animation.rs  mod.rs  orientation.rs
crates/assets_builder/src/data/: common_data.rs  mod.rs  pokemon_data.rs  pokemons.rs  spell_data.rs  spells.rs
crates/assets_builder/src/pokemon_data/: data.rs  mod.rs
crates/bevy_sprite_material/: Cargo.toml
crates/bevy_sprite_material/src/: bundle.rs  extract.rs  lib.rs  sprite.rs  texture_atlas.rs
crates/bitmap_font/: Cargo.toml
crates/bitmap_font/src/: bfn.rs  fonts.rs  lib.rs  loader.rs
crates/char_animation/: Cargo.toml
crates/char_animation/src/: anim_key.rs  file.rs  lib.rs  orientation.rs
crates/common/: Cargo.toml
crates/common/src/: element.rs  lib.rs  map_status.rs
crates/font_atlas/: Cargo.toml
crates/font_atlas/src/: lib.rs  loader.rs
crates/pokemon_data/: Cargo.toml
crates/pokemon_data/src/: data.rs  lib.rs
raw_assets/data/pokemons/: charmander.json
raw_assets/data/spells/: absorb.json  accelerock.json  acid_armor.json  aerial_ace.json  aqua_jet.json  avalanche.json  bind.json  bone_rush.json  bonemerang.json  camouflage.json  ceaseless_edge.json  clamp.json  clear_smog.json  dig.json  dragon_pulse.json  earth_power.json  fairy_lock.json  flame_wheel.json  flamethrower.json  floral_healing.json  follow_me.json  giga_impact.json  haze.json  hyper_beam.json  magic_room.json  mud_sport.json  nature_power.json  octazooka.json  poison_gas.json  pyro_ball.json  roar_of_time.json  rock_slide.json  secret_power.json  seed_flare.json  simple_beam.json  snarl.json  stomp.json  supersonic.json  thunder.json  toxic_spikes.json  (+1 more)
raw_assets/fonts/text/: FontData.xml
scripts/: convert_to_ktx2.sh
src/: actions.rs  camera.rs  constants.rs  effects.rs  faction.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  move_type.rs  pieces.rs  player.rs  pokemons.rs  room.rs  stats.rs  test.rs  turn.rs  utils.rs  visual_effects.rs
src/actions/: action_queue.rs  damage_action.rs  death_action.rs  destroy_wall_action.rs  melee_hit_action.rs  mod.rs  projectile_action.rs  skip_action.rs  spell_action.rs  spell_hit_action.rs  spell_projectile_action.rs  walk_action.rs
src/ai/: mod.rs  npc.rs
src/data/: mod.rs
src/data/assets/: mod.rs  pokemon_data.rs  spell_data.rs  text_data.rs
src/game_control/: mod.rs
src/graphics/: action_animation.rs  anim_data.rs  animations.rs  assets.rs  effects.rs  mod.rs  pieces.rs  pokemon.rs  tile_sprite_index.rs  tiles.rs  visual_effects.rs  world_number.rs
src/graphics/action_animations/: attack_animation.rs  death_animation.rs  hurt_animation.rs  mod.rs  move_animation.rs  projectile_animation.rs  spell_cast_animation.rs  spell_hit_animation.rs
src/graphics/assets/: binary_data.rs  effect_assets.rs  font_assets.rs  fonts.rs  mod.rs  old_effect_assets.rs  pokemon_assets.rs  pokemon_chara_assets.rs  shadow_assets.rs  ui_assets.rs  visual_effect_assets.rs
src/graphics/pokemons/: mod.rs  offsets.rs  pokemon_animator.rs  shadow.rs
src/graphics/sprite_text/: glyph_brush.rs  glyph_brush_layout.rs  layout.rs  mod.rs  node.rs  pipeline.rs  render.rs  section.rs  sprite_label.rs  text.rs  ui.rs  utils.rs
src/graphics/ui/: mod.rs
src/graphics/ui/bordered_frame/: mod.rs  ui.rs  utils.rs
src/graphics/ui/sprite_text/: mod.rs  node.rs  render.rs  section.rs  text.rs  ui.rs  utils.rs
src/ivec2/: mod.rs
src/spells/: mod.rs
src/ui/: event_logger.rs  mod.rs
src/utils/: mod.rs
src/vector2_int/: mod.rs
