[package]
name = "bevy_pokemon_roguelike"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = [
  "crates/assets_builder",
  "crates/bitmap_font",
  "crates/common",
  "crates/char_animation",
  "crates/pokemon_data",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
rpath = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap_font = { path = "crates/bitmap_font" }
char_animation = { path = "crates/char_animation" }
common = { path = "crates/common" }
pokemon_data = { path = "crates/pokemon_data" }
bevy = { version = "0.13.0", features = [
  "asset_processor",
  "basis-universal",
  "ktx2",
  "zstd",
  "multi-threaded",
] }
bevy-inspector-egui = "0.23.2"
bevy_asset_loader = { version = "0.20.0", features = [
  "standard_dynamic_assets",
  "2d",
] }
dyn-clone = "1.0.16"
itertools = "0.12.0"
leafwing-input-manager = "0.13.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
rayon = "1.8.1"
serde = "1.0.195"
strum = { version = "0.26.0", features = ["derive"] }
# serde-xml-rs = "0.6.0"
thiserror = "1.0.56"
image = "0.24.8"
glyph_brush_layout = "0.2.3"
bevy_egui = { version = "0.25.0" }
unicode-linebreak = "0.1.5"
bimap = "0.6.3"

# [dependencies.egui]
# features = ["callstack"]

[features]
dev = ["bevy/dynamic_linking"]
