[package]
name = "bevy_pokemon_roguelike"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = [
  "crates/assets_builder",
  "crates/bitmap_font",
  "crates/common",
  "crates/char_animation",
  "crates/pokemon_data",
]

[workspace.dependencies]
# Bevy-Related
bevy = "0.15.3"
bevy-inspector-egui = "0.30.0"
bevy_asset_loader = { version = "0.22.0", features = [
  "standard_dynamic_assets",
  "2d",
] }
bevy_math = "0.15.3"
leafwing-input-manager = "0.16.0"
# Other
bincode = { version = "2.0.1", features = ["serde"] }
bimap = "0.6.3"
clap = { version = "4.5.41", features = ["derive"] }
crunch = "0.5.3"
dyn-clone = "1.0.19"
glyph_brush_layout = "0.2.4"
image = "0.25.6"
itertools = "0.14.0"
quick-xml = { version = "0.38.0", features = ["serialize", "serde"] }
rand = "0.9.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
unicode-linebreak = "0.1.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
rpath = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap_font = { path = "crates/bitmap_font" }
char_animation = { path = "crates/char_animation" }
common = { path = "crates/common" }
pokemon_data = { path = "crates/pokemon_data" }
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_math = { workspace = true }
bimap = { workspace = true }
clap = { workspace = true }
crunch = { workspace = true }
dyn-clone = { workspace = true }
glyph_brush_layout = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
leafwing-input-manager = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
unicode-linebreak = { workspace = true }

# [dependencies.egui]
# features = ["callstack"]

[features]
dev = ["bevy/dynamic_linking"]
