[package]
name = "assets_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap_font = { path = "../bitmap_font" }
bevy_math = "0.13.0"
crunch = "0.5.3"
image = "0.24.8"
serde = { version = "1.0.196", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
rayon = "1.8.1"
