[package]
name = "assets_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap_font = { path = "../bitmap_font" }
char_animation = { path = "../char_animation" }
common = { path = "../common" }
pokemon_data = { path = "../pokemon_data" }
bevy_math = { workspace = true }
crunch = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
