[package]
name = "bitmap_font"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
postcard = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
