[package]
name = "char_animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bincode = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
