[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_sprite",
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
strum = { version = "0.26.0", features = ["derive"] }
